--- a/src/main/resources/static-resources/css/index.css
+++ b/src/main/resources/static-resources/css/index.css
@@ -68,6 +68,11 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+.dd-item.current {
+  background-color: rgba(255, 255, 255, 0.1);
+  cursor: default;
+}
+
 .menu-popup {
   position: absolute;
   top: 100%;
