--- a/src/main/resources/static-resources/css/index.css
+++ b/src/main/resources/static-resources/css/index.css
@@ -28,7 +28,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 9998;
   padding: 10px;
 }
 
@@ -56,6 +56,7 @@ body {
 
 .nav-menu .dd-menu {
   min-width: 200px;
+  z-index: 9999;
 }
 
 .nav-menu .menu-btn {
@@ -119,6 +120,11 @@ body {
   flex: 0 0 120px;
   display: flex;
   align-items: center;
+  gap: 8px;
+}
+
+.control-left {
+  justify-content: flex-start;
 }
 
 .control-right {
