--- a/src/main/resources/static-resources/css/leader-board.css
+++ b/src/main/resources/static-resources/css/leader-board.css
@@ -51,7 +51,8 @@
   gap: 20px;
   padding: 20px;
   max-width: 1900px;
-  margin: 0;
+  margin: 0 auto;
+  width: min(90%);
 }
 
 /* Section Styles */
@@ -77,6 +78,10 @@
 .leader-board-section,
 .player-games-section {
   min-width: 300px;
+}
+
+.game-details-section {
+  min-width: 800px;
 }
 
 /* Table Styles */
