--- a/src/main/resources/static-resources/css/journal-viewer.css
+++ b/src/main/resources/static-resources/css/journal-viewer.css
@@ -11,7 +11,8 @@
   padding: 20px;
 }
 
-.journal-viewer-in-playbook {
+.journal-viewer-in-playbook,
+.journal-viewer-in-agent-role {
   flex: 1;
   margin: 20px auto;
   padding: 20px;
